reset password and send confirmation links

--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -35,3 +35,6 @@
                     i.icon-off.large
                     | &nbsp;&nbsp;
                     = t('.cancel')
+
+      .panel-footer
+        = render partial: 'devise/shared/footer'
